// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayListItem should render a ClayListItem with action menu 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
  <div class="flex-col">
    <div class="quick-action-menu"></div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with circle icons 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col">
    <span class="sticker sticker-primary rounded-circle">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
      </svg>
    </span>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with classes 1`] = `<li class="list-group-item list-group-item-flex my-custom-class">My Item</li>`;

exports[`ClayListItem should render a ClayListItem with description 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with description and url 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">
      <a href="#1">Item 1</a>
    </h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with icon 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col">
    <span class="sticker sticker-primary">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
      </svg>
    </span>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with id 1`] = `<li class="list-group-item list-group-item-flex" id="myId">My Item</li>`;

exports[`ClayListItem should render a ClayListItem with labels with style 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
    <div class="list-group-detail">
      <span class="label label-info">Aproved</span>
      <span class="label label-warning">Pending</span>
    </div>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with link 1`] = `
<li class="list-group-item list-group-item-flex">
  <a href="#1">Item 1</a>
</li>
`;

exports[`ClayListItem should render a ClayListItem with one label 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
    <div class="list-group-detail">
      <span class="label label-secondary">Status</span>
    </div>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with quick action menu 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
  <div class="flex-col">
    <div class="quick-action-menu">
      <a class=" quick-action-item">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
        </svg>
      </a>
      <a class=" quick-action-item">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
        </svg>
      </a>
      <a class=" quick-action-item">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
        </svg>
      </a>
    </div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</li>
`;

exports[`ClayListItem should render a ClayListItem with two labels 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
    <div class="list-group-detail">
      <span class="label label-secondary">Aproved</span>
      <span class="label label-secondary">Pending</span>
    </div>
  </div>
</li>
`;

exports[`ClayListItem should render a selectable ClayListItem 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col">
    <div class="custom-control custom-checkbox">
      <label>
        <input class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only">select</span>
      </label>
    </div>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">
      <a href="#1">Item 1</a>
    </h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListItem should render a selected ClayListItem 1`] = `
<li class="list-group-item list-group-item-flex active">
  <div class="flex-col">
    <div class="custom-control custom-checkbox">
      <label>
        <input checked="" class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only">select</span>
      </label>
    </div>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">
      <a href="#1">Item 1</a>
    </h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListItem should render the default markup 1`] = `<li class="list-group-item list-group-item-flex">My Item</li>`;
